--- a/src/FoodZone/FoodZone.Web/Views/Reservation/_Reservations.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/_Reservations.cshtml
@@ -26,7 +26,7 @@
                             <td>@item.ReservationDate.ToString("dd/MM/yyyy")</td>
                             <td>@(item.Status == 0 ? "Mới" : item.Status == 1 ? "Xác nhận" : item.Status == 2 ? "Khách đã đến" : item.Status == 3 ? "Hoàn thành" : "Huỷ đặt bàn" )</td>
                             <td>@item.Capacity</td>
-                            <td><a href="history.html" class="btn flosun-button secondary-btn theme-color  rounded-0">View</a></td>
+                            <td><a href="@Url.Action("Details", "Reservation", new {id = item.Id})" class="btn flosun-button secondary-btn theme-color  rounded-0">View</a></td>
                         </tr>
                         <p style="display: none">@(j++)</p>
                     }
