--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="~/Assets/css/style.css" runat="server">
 </head>
-<body>
+<body class="vh-100">
     <!--===== Pre-Loading area Start =====-->
     <div id="preloader">
         <div class="preloader">
