--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="footer-area">
+﻿<footer class="footer-area position-sticky bottom-0">
     <div class="footer-widget-area">
         <div class="container container-default custom-area">
             <div class="row">
