--- a/src/FoodZone/FoodZone.Web/Views/Manage/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Manage/Index.cshtml
@@ -40,7 +40,7 @@
                                                     <div class="col-lg-6 col-custom">
                                                         <div class="single-input-item mb-3">
                                                             <label for="full-name" class="required mb-1">Tên đầy đủ</label>
-                                                            <input type="text" name="Fullname" id="full-name" placeholder="Tên đầy đủ" value="@Model.FullName" />
+                                                            <input type="text" name="Fullname" id="full-name" required placeholder="Tên đầy đủ" value="@Model.FullName" />
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6 col-custom">
@@ -52,11 +52,11 @@
                                                 </div>
                                                 <div class="single-input-item mb-3">
                                                     <label for="PhoneNumber" class="required mb-1">Số điện thoại</label>
-                                                    <input type="text" id="PhoneNumber" name="PhoneNumber" placeholder="Số điện thoại" value="@Model.PhoneNumber" />
+                                                    <input type="number" id="PhoneNumber" name="PhoneNumber" required placeholder="Số điện thoại" value="@Model.PhoneNumber" />
                                                 </div>
                                                 <div class="single-input-item mb-3">
                                                     <label for="email" class="required mb-1">Email</label>
-                                                    <input type="email" id="email" name="Email" placeholder="Email" value="@Model.Email" />
+                                                    <input type="email" id="email" name="Email" required placeholder="Email" value="@Model.Email" />
                                                 </div>
                                                 <div class="single-input-item mb-3" style="width: fit-content">
                                                     <label id="modalBtn" class="required mb-1">
