--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -17,7 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="~/AdminAssets/css/sb-admin-2.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <!-- Custom styles for this page -->
     <link href="~/AdminAssets/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
@@ -133,15 +133,6 @@
                     <span>Quản lý đồ ăn</span>
                 </a>
             </li>
-
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span>
-                </a>
-            </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -254,7 +245,6 @@
 
     <!-- Page level custom scripts -->
     <script src="~/AdminAssets/js/demo/chart-area-demo.js"></script>
-    <script src="~/AdminAssets/js/demo/chart-pie-demo.js"></script>
 
     <!-- Page level plugins -->
     <script src="~/AdminAssets/css/datatables/jquery.dataTables.min.js"></script>
