--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/AutoCreateTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/AutoCreateTable.cshtml
@@ -9,14 +9,15 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="input-group">
-        <div class="modal-body w-100 d-flex">Số lượng bàn: <input type="number" name="NumberOfTable" class="form-control bg-light border-0 small ml-md-3" aria-describedby="basic-addon2"></div>
-        <div class="modal-body w-100 d-flex">Tầng: <input type="number" name="Floor" class="form-control bg-light border-0 small ml-md-3" aria-describedby="basic-addon2"></div>
-        <div class="modal-body w-100 d-flex">Số lượng người : <input type="text" name="Capacities" class="form-control bg-light border-0 small ml-md-3" aria-describedby="basic-addon2"></div>
+        <div class="modal-body w-100 d-flex flex-column">Số lượng bàn: <input type="number" name="NumberOfTable" class="form-control bg-light border-0 small mt-1" aria-describedby="basic-addon2" placeholder="Số lượng bàn"></div>
+        <div class="modal-body w-100 d-flex  flex-column">Tầng: <input type="number" name="Floor" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Tầng"></div>
+        <div class="modal-body w-100 d-flex  flex-column">Số lượng người : <input type="text" name="Capacities" class="form-control bg-light border-0 small  mt-1" aria-describedby="basic-addon2" placeholder="Số lượng người"></div>
     </div>
 
 
-    <div class="modal-footer">
-        <a href="@Url.Action("Index", "TableAdmin")" class="btn btn-secondary">Hủy</a>
-        <input type="submit" class="btn btn-primary" value="Tạo" />
+    <div class="d-flex flex-row">
+
+        <input type="submit" class="btn btn-success mr-4" value="Tạo" />
+        <a href="@Url.Action("Index", "TableAdmin")" class="btn btn-close-white">Hủy</a>
     </div>
 }
