--- a/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <div class="intro11-section swiper-slide slide-5 slide-bg-1 bg-position">
 
             </div>
-            <div class="intro11-section swiper-slide slide-6 slide-bg-1 bg-position">
+            <div class="intro11-section swiper-slide slide-9 slide-bg-1 bg-position">
 
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="single-banner hover-style">
                     <div class="banner-img">
                         <a href="#">
-                            <img src="assets/images/collection/food-1.jpg" alt="">
+                            <img src="~/assets/images/collection/food-1.jpg" alt="">
                             <div class="overlay-1"></div>
                         </a>
                     </div>
@@ -58,7 +58,7 @@
                 <div class="single-banner hover-style">
                     <div class="banner-img">
                         <a href="#">
-                            <img src="assets/images/collection/food-1.jpg" alt="">
+                            <img src="~/assets/images/collection/food-1.jpg" alt="">
                             <div class="overlay-1"></div>
                         </a>
                     </div>
