--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Details.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Details.cshtml
@@ -29,7 +29,7 @@
                                 <td class="pro-thumbnail">@Model.ReservationDate.ToString("dd/MM/yyyy HH:mm:ss")</td>
                                 <td class="pro-thumbnail">@Model.Code</td>
                                 <td class="pro-thumbnail">@Model.Note</td>
-                                <td class="pro-thumbnail">@(Model.Status == 0 ? "Mới" : Model.Status == 1 ? "Xác nhận" : Model.Status == 2 ? "Khách đã đến" : Model.Status == 3 ? "Hoàn thành" : "Huỷ đặt bàn")</td>
+                                <td class="pro-thumbnail">@(Model.Status == 0 ? "Mới" : Model.Status == 1 ? "Khách đã đến" : Model.Status == 2 ? "Hoàn thành" : "Huỷ đặt bàn")</td>
                             </tr>
 
                         </tbody>
