--- a/src/FoodZone/FoodZone.Web/Views/Voucher/Details.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Voucher/Details.cshtml
@@ -8,9 +8,9 @@
     <div class="blog-main-area">
         <div class="container container-default custom-area">
             <div class="row">
-                <div class="col-12 col-custom widget-mt">
+                <div class="col-12 col-custom widget-mt shadow-lg p-5">
                     <!-- Blog Details wrapper Area Start -->
-                    <div class="blog-post-details">
+                    <div class="blog-post-details" style="margin-left: 20% ; width: 60% ">
                         <figure class="blog-post-thumb mb-5">
                             <img src="~/assets/images/@Model.Image" alt="Blog Image">
                         </figure>
