--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
@@ -3,40 +3,57 @@
     ViewBag.Title = "Tạo Danh Mục";
 }
 
-<h2>Tạo Danh Mụcn</h2>
+<h2>Tạo Danh Mục</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal row">
-    <h4>Danh Mục</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group col-md-6">
-        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-    </div>
+    <div class="form-horizontal d-flex flex-column">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group col-md-6">
+            Tên danh mục
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
 
-    <div class="form-group col-md-6 mt-3">
-        <input type="file" class="form-control" name="uploadImage" />
-    </div>
+        <div class="form-group col-md-6">
+            <label class="control-label" for="Menu">Đồ Ăn</label>
+            <div class="">
+                @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
+            </div>
+        </div>
 
-    <div class="form-group col-md-6">
-        <label class="control-label" for="Menu">Đồ Ăn</label>
-        <div class="">
-            @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
+        <div class="form-group col-md-6 mt-3">
+            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+            <input type="file" class="form-control" id="avatar" name="uploadImage" />
+        </div>
+
+        <div class="form-group form-button mt-4 col-md-12">
+            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
+            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
         </div>
     </div>
-
-    <div class="form-group form-button mt-4 col-md-12">
-        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
-        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
-    </div>
-</div>
 }
 
 @section scripts{
     <script src="~/Assets/js/customize.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#showImage').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#avatar").change(function () {
+            readURL(this);
+        });
+    </script>
 }
