--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
@@ -9,32 +9,31 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-<div class="form-horizontal row">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group col-md-6">
-        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-    </div>
+    <div class="form-horizontal d-flex flex-column">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group col-md-6">
+            Tên danh mục
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
 
-    <div class="form-group col-md-6 mt-3">
-        @Html.HiddenFor(model => model.Image)
-        <img src="~/assets/images/@Model.Image" class="img-home" alt="">
-        <input type="file" class="form-control" name="uploadImage" />
-    </div>
+        <div class="form-group col-md-6">
+            <label class="control-label" for="Menu">Đồ Ăn</label>
+            <div class="">
+                @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
+            </div>
+        </div>
 
-    <div class="form-group col-md-6">
-        <label class="control-label" for="Menu">Đồ Ăn</label>
-        <div class="">
-            @Html.ListBoxFor(model => model.SelectedFoodIds, Model.Foods, new { @class = "select-multiple", style = "width:100%" })
+        <div class="form-group col-md-6 mt-3">
+            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+            <input type="file" class="form-control" id="avatar" name="uploadImage" />
+        </div>
+
+        <div class="form-group form-button mt-4 col-md-12">
+            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
+            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
         </div>
     </div>
-
-    <div class="form-group form-button mt-4 col-md-12">
-        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
-        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
-    </div>
-</div>
 }
 
 @section scripts{
