--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/FoodAdmin/Edit.cshtml
@@ -10,15 +10,16 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-<div class="form-horizontal row">
-    <hr />
+<div class="form-horizontal d-flex flex-column">
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group col-md-6">
+        Tên Đồ Ăn
         @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Đồ Ăn" } })
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group col-md-6">
+        Giá
         @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Giá" } })
         @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
     </div>
