--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/MenuAdmin/Edit.cshtml
@@ -11,31 +11,38 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-    <div class="form-horizontal row">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group col-md-6">
+<div class="form-horizontal d-flex flex-column">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group col-md-6">
+        Tên menu
+        <div>
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên Menu" } })
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group col-md-6">
+    <div class="form-group col-md-6">
+        Giá
+        <div>
             @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Gia" } })
             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group col-md-6">
-            <label class="control-label" for="Menu">Categories</label>
-            <div class="">
-                @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", style = "width:100%" })
-            </div>
-        </div>
+    </div>
 
-        <div class="form-group form-button mt-4 col-md-12">
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
-            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+    <div class="form-group col-md-6">
+        <label class="control-label" for="Menu">Danh mục</label>
+        <div class="">
+            @Html.ListBoxFor(model => model.SelectedCategoryIds, Model.Categories, new { @class = "select-multiple", style = "width:100%" })
         </div>
     </div>
+
+    <div class="form-group form-button mt-4 col-md-12">
+        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
+        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+    </div>
+</div>
 }
 
 @section scripts{
