--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/NewsAdmin/Edit.cshtml
@@ -31,18 +31,17 @@
             </div>
         </div>
 
-        <div class="form-group col-md-6 mt-3">
-            @Html.HiddenFor(model => model.Image)
-            <img src="~/assets/images/@Model.Image" class="img-home" alt="">
-            <input type="file" class="form-control" name="uploadImage" />
-        </div>
-
         <div class="form-group col-md-12">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
             <div>
                 <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+            <input type="file" class="form-control" id="avatar" name="uploadImage" />
         </div>
 
         <div class="form-group form-button mt-4 col-md-12">
@@ -55,4 +54,21 @@
 @section scripts {
     <script src="~/assets/js/ckeditor/ckeditor.js"></script>
     <script src="~/assets/js/ckeditor/ckeditorconfig.js"></script>
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#showImage').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#avatar").change(function () {
+            readURL(this);
+        });
+    </script>
 }
