--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/Edit.cshtml
@@ -14,32 +14,32 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group col-md-6">
-        Ten khach hang
+        Tên khách hàng
         @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
     <div class="form-group col-md-6">
-        So dien thoai
+        Số điện thoại
         @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
     <div class="form-group col-md-6">
-        Ngay dat
+        Ngày đặt bàn
         @Html.EditorFor(model => model.ReservationDate, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
     <div class="form-group col-md-6">
-        So luong ban
+        Số lượng bàn
         @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
     <div class="form-group col-md-6">
-        Ma khuyen mai
+        Mã khuyến mãi
         @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
     <div class="form-group col-md-12">
-        Ghi chu
+        Ghi chú
         @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control", @disabled = "disable" } })
     </div>
 
@@ -48,25 +48,25 @@
     </div>
 
     <div class="form-group col-md-6">
-        Li do huy
-        @Html.TextAreaFor(model => model.CancelReason, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-        @Html.ValidationMessageFor(model => model.CancelReason, "", new { @class = "text-danger" })
+        Lý do huỷ
+        <div class="col-md-6">
+            <textarea cols="50" data-val="true" data-val-length="Lí do huỷ không lớn hơn 500 ký tự" 
+                      data-val-length-max="500"
+                      id="CancelReason" name="CancelReason" rows="2">@Model.CancelReason</textarea>
+            @Html.ValidationMessageFor(model => model.CancelReason, "", new { @class = "text-danger" })
+        </div>
     </div>
 
     <div class="form-group col-md-6">
-        Trạng Thái: @(Model.Status == 0 ? "Mới" : Model.Status == 1 ? "Xác nhận" : Model.Status == 2 ? "Khách đã đến" : Model.Status == 3 ? "Hoàn thành" : "Huỷ đặt bàn" )
+        Trạng Thái: @(Model.Status == 0 ? "Mới" : Model.Status == 1 ? "Khách đã đến" : Model.Status == 2 ? "Hoàn thành" : "Huỷ đặt bàn" )
     </div>
 
-    <div class="form-group form-button mt-4 col-md-12">
+    <div class="form-group form-button mt-4 col-md-12 ">
         @if (Model.Status == 0)
-        {
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Xác nhận" />
-        }
-        else if (Model.Status == 1)
         {
             <input type="submit" name="signup" id="signup" class="btn btn-success" value="Khách đã đến" />
         }
-        else if (Model.Status == 2)
+        else if (Model.Status == 1)
         {
             <input type="submit" name="signup" id="signup" class="btn btn-success" value="Hoàn thành" />
         }
