--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Create.cshtml
@@ -3,17 +3,17 @@
     ViewBag.Title = "Tạo";
 }
 
-<h2>Tạo</h2>
+<h2>Tạo Bàn</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal row">
-        <h4>Bàn</h4>
-        <hr />
+    <div class="form-horizontal d-flex flex-column">
+      
+       
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6 ">
             @Html.LabelFor(model => model.Floor, htmlAttributes: new { @class = "control-label" })
             <div>
                 @Html.EditorFor(model => model.Floor, new { htmlAttributes = new { @class = "form-control" } })
@@ -36,8 +36,8 @@
                 @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @Html.HiddenFor(m => m.Status)
+ 
+       @Html.HiddenFor(m => m.Status)
 
         <div class="form-group form-button mt-4">
             <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
