--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Edit.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-    <div class="form-horizontal row">
+    <div class="form-horizontal d-flex flex-column">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group col-md-6">
