--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
@@ -11,67 +11,68 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="row">
-    <div class="col-md-12">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    </div>
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
-        <div>
-            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col-md-12">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        </div>
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
+            <div>
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
+            <div>
+                @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div>
+                @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" }, id = "ExpiredDate" })
+                @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div>
+                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })
+            <div>
+                @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-12">
+            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
+            <div>
+                <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
+                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+            <input type="file" class="form-control" id="avatar" name="uploadImage" />
+        </div>
+
+        <div class="form-group form-button mt-4 col-md-12">
+            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
+            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
         </div>
     </div>
-
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
-        <div>
-            @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group col-md-6 mt-3">
-        <input type="file" class="form-control" name="uploadImage" />
-    </div>
-
-    <div class="form-group col-md-6 mt-3">
-        @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div>
-            @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" }, id = "ExpiredDate" })
-            @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group col-md-6 mt-3">
-        @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div>
-            @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label" })
-        <div>
-            @Html.EditorFor(model => model.ShortDescription, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group col-md-12">
-        @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
-        <div>
-            <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
-            @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group form-button mt-4 col-md-12">
-        <input type="submit" name="signup" id="signup" class="btn btn-success" value="Tạo" />
-        @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
-    </div>
-</div>
 }
 
 @section scripts {
@@ -85,4 +86,22 @@
                 changeYear: true, yearRange: "2022:2032", currentText: "Now"
             });
         });</script>
+
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#showImage').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#avatar").change(function () {
+            readURL(this);
+        });
+    </script>
 }
