--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Edit.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "Sửa Ưu Đãi";
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 }
 
 <h2>Sửa Ưu Đãi</h2>
-<h4>@TempData["Message"]</h4>
 
 @using (Html.BeginForm("Edit", "VoucherAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -31,14 +31,9 @@
             </div>
         </div>
 
-        <div class="form-group col-md-6 mt-3">
-            @Html.HiddenFor(model => model.Image)
-            <img src="~/assets/images/@Model.Image" class="img-home" alt="">
-            <input type="file" class="form-control" name="uploadImage" />
-        </div>
 
         <div class="form-group col-md-6 mt-3">
-            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-3" })
             <div>
                 @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control" }, id = "ExpiredDate" })
                 @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
@@ -61,12 +56,22 @@
             </div>
         </div>
 
+
+
+
         <div class="form-group col-md-12">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label" })
             <div>
                 <textarea class="form-control" name="Content" id="ckeditor">@Model.Content</textarea>
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group col-md-6 mt-3">
+            @Html.HiddenFor(model => model.Image)
+            <div> <img id="showImage" src="~/assets/images/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
+
+            <input type="file" class="form-control" id="avatar" name="uploadImage" />
         </div>
 
         <div class="form-group col-md-6 mt-3">
@@ -98,4 +103,23 @@
                 changeYear: true, yearRange: "2022:2032", currentText: "Now"
             });
         });</script>
+
+
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#showImage').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#avatar").change(function () {
+            readURL(this);
+        });
+    </script>
 }
