--- a/src/FoodZone/FoodZone.Web/Areas/Identity/Views/RolesAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Identity/Views/RolesAdmin/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit.</h2>
+<h2>Sửa chức vụ</h2>
 
 
 @using (Html.BeginForm())
@@ -12,30 +12,29 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Roles.</h4>
-        <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Name)
+        <div class="form-group mb-3">
+            <label class="control-label col-md-2">Tên chức vụ</label>
+            <div class="col-md-5">
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Name)
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" />
+            <div class="w-100 d-flex flex-row mt-3">
+
+                <div class="w-auto mr-1">
+
+                    <input type="submit" value="Sửa" class="btn btn-success" />
+                </div>
+                <div class=" float-right w-auto btn btn btn-light ml-2">
+                    <a style="text-decoration: none; color: black" href="@Url.Action("Index", "RolesAdmin")">Trở về</a>
+                </div>
             </div>
         </div>
-    </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
