--- a/src/FoodZone/FoodZone.Web/Areas/Identity/Views/UsersAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Identity/Views/UsersAdmin/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EditUserViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Sửa";
 }
 
-<h2>Edit.</h2>
+<h2>Sửa người dùng</h2>
 
 
 @using (Html.BeginForm())
@@ -12,21 +12,21 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Edit User Form.</h4>
+        
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @readonly = "readonly" })
+        <div class="form-group d-flex flex-row">
+            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-1 " })
+            <div class="col-md-5">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control w-50", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
-        <div class="form-group">
-            @Html.Label("Roles", new { @class = "control-label col-md-2" })
-            <span class=" col-md-10">
+        <div class="form-group d-flex flex-row ">
+            @Html.Label("Roles", new { @class = "control-label col-md-1 " })
+            <span class=" col-md-10 d-flex flex-column">
                 @foreach (var item in Model.RolesList)
                 {
                     <input type="checkbox" name="SelectedRole" value="@item.Value" checked="@item.Selected" class="checkbox-inline" />
@@ -35,17 +35,20 @@
             </span>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-info" />
+        <div class="w-100 d-flex flex-row mt-3">
+
+            <div class="w-auto mr-1">
+
+                <input type="submit" value="Sửa" class="btn btn-success" />
+            </div>
+            <div class=" float-right w-auto btn btn btn-light ml-2">
+                <a style="text-decoration: none; color: black" href="@Url.Action("Index", "UsersAdmin")">Trở về</a>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
