Update chart dashboard

--- a/src/FoodZone/FoodZone.Web/Views/Shared/_GetCategoryByMenu.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_GetCategoryByMenu.cshtml
@@ -23,7 +23,7 @@
                         <!--Single Banner Area Start-->
                         <div class="single-banner hover-style">
                             <div class="banner-img">
-                                <img src="~/assets/images/collection/food-1.jpg" alt="">
+                                <img src="~/assets/images/@item.Image" alt="">
                                 <div class="overlay-1"></div>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                         <!--Single Banner Area Start-->
                         <div class="single-banner hover-style">
                             <div class="banner-img">
-                                <img src="~/assets/images/collection/food-1.jpg" alt="">
+                                <img src="~/assets/images/@item.Image" alt="">
                                 <div class="overlay-1"></div>
                             </div>
                         </div>
